--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "json2xml": "^0.1.3",
     "lodash": "^4.17.5",
-    "mongoose": "^5.0.10"
+    "mongoose": "^5.0.10",
+    "xml2json": "^0.11.0"
   }
 }
