--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "node_lab1",
+  "name": "web_services_project",
   "version": "1.0.0",
-  "description": "node lab 1",
+  "description": "web_services_project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js"
+    "start": "cross-env NODE_ENV=development nodemon --exec babel-node index.js",
+    "test": "cross-env NODE_ENV=test mocha --require babel-core/register --require babel-polyfill --reporter mochawesome"
   },
-  "author": "fxwalsh",
+  "author": "pdungan",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
-    "nodemon": "^1.14.11"
+    "mocha": "^5.1.0",
+    "mochawesome": "^3.0.2",
+    "mockgoose": "^7.3.5",
+    "nodemon": "^1.14.11",
+    "should": "^13.2.1",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
