--- a/package.json
+++ b/package.json
@@ -25,12 +25,18 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cross-env": "^5.1.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-async-handler": "^1.1.3",
     "json2xml": "^0.1.3",
+    "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.10",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "xml2json": "^0.11.0"
   }
 }
