--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=8080
 HOST=localhost
-mongoDB=mongodb://Pdungan:Joshua2006@ds113799.mlab.com:13799/drivers
+mongoDB=mongodb://Username:Password@ds113799.mlab.com:13799/drivers
 seedDb=true
 
 secret = Ted
