--- a/package.json
+++ b/package.json
@@ -38,6 +38,19 @@
     "mongoose": "^5.0.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "xml2json": "^0.11.0"
+    "xml2json": "^0.11.0",
+ "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.16.0",
+    "eslint-config-google": "^0.9.1",
+    "mocha": "^5.1.0",
+    "mochawesome": "^3.0.2",
+    "mockgoose": "^7.3.5",
+    "nodemon": "^1.14.11",
+    "should": "^13.2.1",
+    "supertest": "^3.0.0"
   }
 }
