--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=8080
-HOST=localhost
+HOST=driversapi.herokuapp.com
 mongoDB=mongodb://Pdungan:Joshua2006@ds113799.mlab.com:13799/drivers
 seedDb=true
 
